# sre-agent

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: clusters.yaml  datasources.yaml  thresholds.yaml  whitelist.yaml
src/: agent.py  bot.py  config.py  extra_hosts.py  grafana_client.py  health.py  main.py  memory_store.py
src/tools/: __init__.py  assess.py  discovery.py  host.py  mysql.py  pxc.py  redis.py
sre_agent.egg-info/: SOURCES.txt  requires.txt
tests/: conftest.py  test_assess.py  test_clusters.py  test_combine.py  test_datasources.py  test_discovery.py  test_extra_hosts.py  test_grafana_client.py  test_memory_store.py  test_redis.py
