[project]
name = "sre-agent"
version = "0.1.0"
description = "SRE Telegram chat agent querying Prometheus via Grafana"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0,<22.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
